--- a/_config.yml
+++ b/_config.yml
@@ -1,65 +1,25 @@
 # 1. Site Settings
-title               : pRoJEct-VeXEd
-owner               : "DeerRIDER"
-url                : "https://akiritsu.github.io"
-baseurl            : "/pRoJEct-VeXEd"
+title               : Rytmikarz Szczeciński
+owner               : false
+url                : "https://rytmikarz.pl"
+baseurl            : "/"
 permalink           : /:title/
 description         : "A hacker-style note-keeping website template."
 markdown            : kramdown
-statement           : "Designed by DeerRIDER, All Rights Reserved"
-bgtext              : "ABCFGHKLMNPQRSVWXYZabcdefghijklmnopqrstuvwxyz@#$%&*+-;/[]<>~" # texts randomly displayed in background
+statement           : "MAIN IC BOARD: ERROR"
+bgtext              : "Rytmikarz~Szczeciński~" # texts randomly displayed in background
 
 # 2. Your Collections
 # You can specify the order shown in Archive window. 
 # Keep it null if you want to show items in alphabetic order.
 collection_order    : 
   [
-    "posts",
-    "math",
-    "album",
-    "physics",
-    "biology",
-    "finance",
-    "physics",
-    "my_notes",
-    "portfolio",
+
   ]
 collections:
-  math:   
-    output          : true
-    permalink       : /:collection/:title/
-    sort_by         : date
-    alias           : "Mathematics"
-  portfolio:
-    output          : true
-    permalink       : /:collection/:title/
-    order: # specify post order manually
-      - portfolio3.md
-      - portfolio2.md
-      - portfolio1.md
-  album:
-    output          : true
-    permalink       : /:collection/:title/
-    sort_by         : date
-  physics:
-    output          : true
-    permalink       : /:collection/:title/
-  biology:
-    output          : true
-    permalink       : /:collection/:title/
-  finance:
-    output          : true
-    permalink       : /:collection/:title/
-  my_notes:
-    output          : true
-    permalink       : /:collection/:title/
-    # An alias should be given or the UNDERSCORE will appeared 
-    alias           : "My Notes"
-  posts:
-    output          : true
 
 # 3. Comment settings（disqus.com）
-disqus_username     : akiritsu
+# disqus_username     : akiritsu
 
 # 4. Default page settings (WILL BE overwriten by front-matters of a page)
 defaults:
@@ -67,33 +27,33 @@ defaults:
     scope:
       path          : ""  # an empty string here means all files in the project
     values:
-      layout              : "post"      # which layout to use by default
+      layout              : "default"      # which layout to use by default
       publish             : true        # whether to show by default      
       btn_text            : true        # whether show button text by default
-      collection_list     : true        # whether show archive button by default
+      collection_list     : false        # whether show archive button by default
       home_btn            : true        # whether show home by default
-      maximize            : true        # whether show maximize button by default
+      maximize            : false        # whether show maximize button by default
       encrypted_text      : false       # whether use encrytion function by default
-      toc                 : true        # whether show table of content by default
+      toc                 : false        # whether show table of content by default
       toc_level           : 3           # the toc depth by default
-      author              : "DeerRIDER" # author name by default
-      show_date           : true        # whether show date message by default
+      author              : "Rytmikarz Szczeciński" # author name by default
+      show_date           : false        # whether show date message by default
       category            :             # category by default
       post_list           : false       # whether show list of post by default      
-      comment             : true
+      comment             : false
       footer              : true        # whether show footer by default
 
 # 5. Social Media Accounts
-email               : "https://github.com/akiritsu/pRoJEct-VeXEd" 
+email               :  
 linkedin            : 
-github              : "just-test" 
+github              : 
 gitlab              : 
-website             : "https://github.com/akiritsu/pRoJEct-VeXEd"
-twitter             : "just-test"
-facebook            : "just-test"
-instagram           : 
-youtube             : "just-test"
-steam               : "just-test"
+website             : 
+twitter             : 
+facebook            : "rytmikarz"
+instagram           : "rytmikarz"
+youtube             : 
+steam               : 
 weibo               :
       
 # 6. Where things are
