--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ owner               : false
 url                : "https://rytmikarz.pl"
 baseurl            : "/"
 permalink           : /:title/
-description         : "A hacker-style note-keeping website template."
+description         : "lokalna społeczność graczy gier rytmicznych"
 markdown            : kramdown
 statement           : "MAIN IC BOARD: ERROR"
 bgtext              : "Rytmikarz~Szczeciński~" # texts randomly displayed in background
