Aktualizacja FontAwesome do 6.5.2

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ instagram           : "rytmikarz"
 youtube             : 
 steam               : 
 weibo               :
+discord: "https://discord.gg/tJ9BBqcAXV"
       
 # 6. Where things are
 source              : .
