--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,22 @@ bgtext              : "Rytmikarz~Szczeciński~" # texts randomly displayed in ba
 # Keep it null if you want to show items in alphabetic order.
 collection_order    : 
   [
-
+    "druciarstwo",
+    "wydarzenia",
   ]
 collections:
+  wydarzenia:   
+    output          : true
+    permalink       : /:collection/:title/
+    sort_by         : last_updated
+    alias           : "wydarzenia (info i blogi)"
+  druciarstwo:   
+    output          : true
+    permalink       : /:collection/:title/
+    sort_by         : last_updated
+    alias           : "druciarstwo (nasze konstrukcje)"
+  posts:
+    output: false
 
 # 3. Comment settings（disqus.com）
 # disqus_username     : akiritsu
@@ -30,7 +43,7 @@ defaults:
       layout              : "default"      # which layout to use by default
       publish             : true        # whether to show by default      
       btn_text            : true        # whether show button text by default
-      collection_list     : false        # whether show archive button by default
+      collection_list     : true        # whether show archive button by default
       home_btn            : true        # whether show home by default
       maximize            : false        # whether show maximize button by default
       encrypted_text      : false       # whether use encrytion function by default
