--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description         : "lokalna społeczność graczy gier rytmicznych"
 markdown            : kramdown
 statement           : "MAIN IC BOARD: ERROR"
 bgtext              : "Rytmikarz Szczeciński " # texts randomly displayed in background
-
+future              : true
 # 2. Your Collections
 # You can specify the order shown in Archive window. 
 # Keep it null if you want to show items in alphabetic order.
